@@ -4,6 +4,8 @@
  * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
+ 
+defined('_JEXEC') or die;
 
 /**
  * Banners component helper.
