@@ -7,6 +7,8 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
+defined('_JEXEC') or die;
+
 /**
  * @param	array	A named array
  * @return	array
