@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-May-2011 Mark Dexter
+ # [#25733] Direct access as no defined('_JEXEC') or die; in com_mailto/helpers/mailto.php
+
 24-May-2011 Mark Dexter
  # [#25908] Code Style improvements for the installation
 
